:rotating_light: Fix SonarLint issues